# mortgage_stuff

./: buy_vs_rent.ipynb  how_long_fixed.ipynb  investment_options_mc.py  mc_analysis.py  monte_carlo.ipynb  monte_carlo_case_studies.ipynb  mortgage.py  mortgage_mc.py  pyproject.toml  run_scenarios.py  scenario_analysis.py  valuation.ipynb
